# personal-hooks

./: .gitignore  Cargo.toml  package-lock.json  package.json  rustfmt.toml  serverless.yml
src/: app.rs  handle.rs  lamb.rs  main.rs  notify.rs  utils.rs
src/app/: mod.rs
src/app/state/: .file.rs.kak.9M2xJa  file.rs  in_mem.rs  mod.rs
src/calendar/: event.rs  mod.rs  outlook.rs
src/integrate/: ad.rs  mod.rs  outlook.rs
src/notify/: mod.rs  pushbullet.rs
src/prelude/: mod.rs  result.rs
