[package]
name = "hooks_lambda"
version = "0.1.0"
authors = ["Orion Kindel <orion.kindel@integrate.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
netlify_lambda = "0.2.0"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
