[package]
name = "hooks_lambda"
version = "0.1.0"
authors = ["Orion Kindel <orion.kindel@integrate.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = "0.5"
maplit = "1"
im = "15"
futures = "0.3"
async-trait = "0.1"
thiserror = "1"
netlify_lambda = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["multipart", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
